tests/sources/invalid/types/cast_undefined_operand.fire
// Casting an undefined identifier: the operand's type can't be resolved,
// so the cast's own type check bails out early rather than trying to
// validate a cast with an unknown source type.
fn main() -> int32 {
    x: int32 = undef as int32;  //~ ERROR FS-PARSE-0003 @16
    return x;
}
